--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "standard --env mocha"
+  },
+  "devDependencies": {
+    "standard": "^11.0.0"
   }
 }
