--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
+  "engines": {
+    "node": "^8.9.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
