--- a/package.json
+++ b/package.json
@@ -15,13 +15,22 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "standard --env mocha"
+    "lint": "standard --env mocha",
+    "flow": "flow",
+    "standard": "standard"
   },
   "devDependencies": {
     "aws-appsync": "^1.0.12",
     "aws-appsync-react": "^1.0.6",
     "aws-sdk": "^2.205.0",
+    "babel-eslint": "^8.2.2",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "flow-bin": "^0.66.0",
     "react-apollo": "^2.0.4",
     "standard": "^11.0.0"
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "plugins": [ "flowtype" ]
   }
 }
