--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "babel-eslint": "^8.2.2",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
+    "graphql-tag": "^2.8.0",
     "react-apollo": "^2.0.4",
     "standard": "^11.0.0"
   },
   "standard": {
     "parser": "babel-eslint",
-    "plugins": [ "flowtype" ]
+    "plugins": [
+      "flowtype"
+    ]
   }
 }
