--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
+      - run: sudo apt-get -y -qq install awscli
       - run: npm install
 
       - save_cache:
@@ -20,5 +20,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      # Run tests
       - run: npm run lint
       - run: npm run test
+
+      # Deploy
+      - deploy:
+          - npm run build
+          - aws s3 sync build/ s3://unite-app/
