--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,6 @@ jobs:
       - run: npm run test
 
       # Deploy
-      - deploy:
-          - npm run build
-          - aws s3 sync build/ s3://unite-app/
+      - deploy: |
+          npm run build \
+          aws s3 sync build/ s3://unite-app/
