--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,4 @@ jobs:
           name: Deploy to s3
           command: |
             npm run build \
-            aws s3 sync build/ s3://unite-app/
+            aws s3 sync build/ s3://unite-app/ --delete
