Separate build and deploy steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,12 @@ jobs:
 
       # Deploy
       - deploy:
+          name: Run build
+          command: |
+            npm run build
+
+      - deploy:
           name: Deploy to s3
           command: |
-            npm run build \
             aws s3 sync build/ s3://unite-app/ --delete
+
