--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "aws-appsync-react": "^1.0.6",
     "aws-sdk": "^2.205.0",
     "babel-eslint": "^8.2.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-flowtype": "^2.46.1",
     "flow-bin": "^0.66.0",
     "graphql-tag": "^2.8.0",
