--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "standard --env mocha",
+    "lint": "standard --env jest",
     "flow": "flow",
     "standard": "standard"
   },
