--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "reason-js": "^0.3.0",
+    "reason-react": "^0.3.4"
   },
   "engines": {
     "node": "^8.9.4"
@@ -17,7 +19,10 @@
     "eject": "react-scripts eject",
     "lint": "standard --env jest",
     "flow": "flow",
-    "standard": "standard"
+    "standard": "standard",
+    "buckle:up": "bsb -make-world -w",
+    "buckle:build": "bsb -make-world",
+    "buckle:clean": "bsb -clean-world"
   },
   "devDependencies": {
     "apollo-cache-inmemory": "^1.1.9",
@@ -25,6 +30,7 @@
     "aws-appsync-react": "^1.0.6",
     "aws-sdk": "^2.205.0",
     "babel-eslint": "^8.2.2",
+    "bs-platform": "^2.2.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-flowtype": "^2.46.1",
